--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "autosize": "^5.0.1",
     "axios": "^0.26.1",
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
@@ -25,6 +26,7 @@
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.4.0",
+    "react-mentions": "^4.4.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^9.0.4",
@@ -38,9 +40,11 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
+    "@types/autosize": "^4.0.1",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.26",
+    "@types/react-mentions": "^4.1.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.0.3",
